tests/cases/scc/error/0015-macro.c
//!necc-dbg @ -as
#define Xx(Ape,   Ape)    0

